[tool.poetry]
name = "being_robust"
version = "0.1.0"
description = "Minimal implementation of being robust (in high dimensions) an be practical"
authors = ["Simon Geisler <geisler@in.tum.de>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
scipy = "^1.4.1"
scikit-learn = "^0.23.1"
pytest-cov = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
autopep8 = "^1.5.3"
